--- a/styles/blog.css
+++ b/styles/blog.css
@@ -343,7 +343,7 @@ section {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  width: max(45%, 28rem);
+  width: 90%;
   padding-left: 0;
   padding-top: 10rem;
   padding-bottom: 10rem;
@@ -354,8 +354,20 @@ section {
   justify-content: flex-start;
   align-items: flex-start;
   flex-wrap: nowrap;
-  width: 64rem;
+  width: max(40%, 35rem);
   margin-block: 2rem;
+}
+@media (max-width: 812px) {
+  .cards li {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 85%;
+    text-align: center;
+    margin-block: 5vw;
+  }
 }
 .cards h2 {
   margin-top: 0;
@@ -371,7 +383,7 @@ section {
 }
 
 .cardContent {
-  width: 60rem;
+  width: 80%;
   padding-left: 3rem;
 }
 
@@ -385,6 +397,14 @@ section {
   justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
+}
+@media (max-width: 812px) {
+  .iconHolder {
+    width: 20vw;
+    height: 20vw;
+    text-align: center;
+    margin-block: 5vw;
+  }
 }
 .iconHolder img {
   display: block;
@@ -707,6 +727,15 @@ body {
   flex-wrap: wrap;
   padding-block: 5rem;
 }
+@media (max-width: 1100px) {
+  .blogContent {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
 
 .leftSide {
   background: #171B0E;
@@ -717,6 +746,13 @@ body {
   flex-grow: 1;
   margin-bottom: 30rem;
   padding-bottom: 2rem;
+}
+@media (max-width: 1100px) {
+  .leftSide {
+    flex-grow: 1;
+    max-width: 75%;
+    margin-bottom: 0;
+  }
 }
 .leftSide h4 {
   color: #FFD300;
@@ -731,6 +767,12 @@ body {
   width: 100%;
   left: -3rem;
   top: -2rem;
+}
+@media (max-width: 1100px) {
+  .leftSide img {
+    left: 0;
+    top: 0;
+  }
 }
 
 .recent {
@@ -765,12 +807,27 @@ body {
   position: relative;
   top: -30rem;
 }
+@media (max-width: 1100px) {
+  .rightSide {
+    width: 85%;
+    margin: 0 auto;
+    top: 0;
+  }
+}
 .rightSide .opportunitiesImg {
   box-shadow: -12px 12px 0px 6px #FFD300;
   box-shadow: -20px 23px 0px 0px #FFD300;
   position: relative;
   right: -2rem;
-  width: calc(100% - 2rem);
+  width: min(4vw, 4rem);
+}
+@media (max-width: 1100px) {
+  .rightSide .opportunitiesImg {
+    position: static;
+    width: 100%;
+    box-shadow: none;
+    border: 1vw solid #FFD300;
+  }
 }
 .rightSide h3 {
   color: #FFD300;
@@ -780,6 +837,7 @@ body {
   text-transform: uppercase;
   margin: 0;
   padding-block: 1rem;
+  font-size: clamp(2rem, 9vw, 4.5rem);
 }
 
 .opportunities {
@@ -787,9 +845,20 @@ body {
   border-bottom: 1rem solid #FFD300;
   padding: 4rem 0 4rem 4rem;
 }
+@media (max-width: 1100px) {
+  .opportunities {
+    border: 1vw solid #FFD300;
+    margin-top: -1vw;
+  }
+}
 
 .comments h3 {
-  padding: 5rem 10rem;
+  padding: 5%;
+}
+@media (max-width: 1100px) {
+  .comments h3 {
+    text-align: center;
+  }
 }
 
 .commentCard {
@@ -798,7 +867,16 @@ body {
   justify-content: flex-start;
   align-items: flex-start;
   flex-wrap: nowrap;
-  padding: 2rem 10rem;
+  padding: 2rem;
+}
+@media (max-width: 480px) {
+  .commentCard {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
 }
 
 .date {
@@ -818,12 +896,22 @@ body {
   font-size: 3rem;
   margin-top: 10rem;
 }
+@media (max-width: 1100px) {
+  .commentForm {
+    margin-top: 0;
+  }
+}
 .commentForm input[type=text] {
   color: #FFFFFF;
   border: none;
   background: transparent;
   border-bottom: 2px solid #FFD300;
   width: 40%;
+}
+@media (max-width: 480px) {
+  .commentForm input[type=text] {
+    width: 85%;
+  }
 }
 .commentForm input[type=textarea] {
   border: 2px solid #FFD300;
@@ -847,6 +935,12 @@ body {
   flex-wrap: nowrap;
   flex-shrink: 1;
   width: 80%;
+}
+@media (max-width: 480px) {
+  .nameAndEmail {
+    flex-direction: column;
+    width: 100%;
+  }
 }
 .nameAndEmail input {
   width: 50%;
