--- a/styles/mallContact.css
+++ b/styles/mallContact.css
@@ -710,6 +710,998 @@ footer p {
   padding-block: 2rem;
 }
 
+html {
+  line-height: 1.15;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+body {
+  margin: 0;
+}
+
+article, aside, footer, header, nav, section {
+  display: block;
+}
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+figcaption, figure, main {
+  display: block;
+}
+
+figure {
+  margin: 1em 40px;
+}
+
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+
+pre {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+a {
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects;
+}
+
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  -webkit-text-decoration: underline dotted;
+  text-decoration: underline dotted;
+}
+
+b, strong {
+  font-weight: inherit;
+}
+
+b, strong {
+  font-weight: bolder;
+}
+
+code, kbd, samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+dfn {
+  font-style: italic;
+}
+
+mark {
+  background-color: #ff0;
+  color: #000;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+audio, video {
+  display: inline-block;
+}
+
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+img {
+  border-style: none;
+}
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
+button, input, optgroup, select, textarea {
+  font-family: sans-serif;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+button, input {
+  overflow: visible;
+}
+
+button, select {
+  text-transform: none;
+}
+
+button, html [type=button], [type=reset], [type=submit] {
+  -webkit-appearance: button;
+}
+
+button::-moz-focus-inner, [type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+button:-moz-focusring, [type=button]:-moz-focusring, [type=reset]:-moz-focusring, [type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
+
+progress {
+  display: inline-block;
+  vertical-align: baseline;
+}
+
+textarea {
+  overflow: auto;
+}
+
+[type=checkbox], [type=radio] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+[type=search] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px;
+}
+
+[type=search]::-webkit-search-cancel-button, [type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
+}
+
+details, menu {
+  display: block;
+}
+
+summary {
+  display: list-item;
+}
+
+canvas {
+  display: inline-block;
+}
+
+template {
+  display: none;
+}
+
+[hidden] {
+  display: none;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+@font-face {
+  font-family: "JosefinSans";
+  src: url(./fontsAndTypography/JosefinSans/JosefinSans-Bold.ttf);
+  font-weight: bold;
+}
+@font-face {
+  font-family: "JosefinSans";
+  src: url(./fontsAndTypography/JosefinSans/JosefinSans-SemiBold.ttf);
+  font-weight: 600;
+}
+@font-face {
+  font-family: "JosefinSans";
+  src: url(./fontsAndTypography/JosefinSans/JosefinSans-Regular.ttf);
+  font-weight: normal;
+}
+@font-face {
+  font-family: "Barlow";
+  src: url(./fontsAndTypography/barlow/Barlow-Regular.ttf);
+  font-weight: normal;
+}
+html {
+  font-size: 62.5%;
+}
+
+.wrapper {
+  width: min(80%, 150rem);
+  margin: 0 auto;
+}
+
+p {
+  font-family: "Barlow";
+  font-weight: regular;
+  font-size: 2rem;
+}
+
+.mainImage {
+  background: url(./../the-restaurant-mall-assets/home-header.jpg);
+  height: clamp(10rem, 60vw, 115rem);
+}
+
+.coreHeader {
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: relative;
+  background-color: #2B331B;
+}
+
+.upperNav ul {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  margin-top: 0;
+  padding-left: clamp(0.5rem, 0.5vw, 4rem);
+}
+
+.upperNav ul li {
+  padding-left: 1rem;
+  padding-right: clamp(1rem, 2vw, 4rem);
+  padding-block: 1rem;
+}
+
+.upperNav ul a {
+  text-transform: capitalize;
+  text-decoration: none;
+  font-family: "JosefinSans";
+  font-weight: bold;
+  font-size: clamp(1rem, 2vw, 2rem);
+  padding-block: 1rem;
+  color: white;
+}
+
+.upperNav ul a:hover {
+  border-bottom: 0.2rem solid #FFD300;
+}
+
+h1 {
+  display: flex;
+  flex-direction: column;
+  padding-block: clamp(1rem, 6vw, 10rem);
+  text-transform: uppercase;
+  font-family: "JosefinSans";
+  font-weight: bold;
+  font-size: clamp(1rem, 5vw, 10rem);
+  color: white;
+}
+
+h1 p {
+  font-family: "JosefinSans";
+  font-weight: bold;
+  font-size: clamp(1rem, 5vw, 10rem);
+  margin: 0;
+}
+
+h1 span {
+  background-color: #FFFFFF;
+  color: #1B1B1B;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.homeboxHeader {
+  position: absolute;
+  top: clamp(5rem, 10vw, 36rem);
+  right: 0;
+  width: 50%;
+}
+
+.homeboxHeader img {
+  width: 100%;
+}
+
+.homeboxHeader img::before {
+  content: url(../icons/location-dot-solid.svg);
+  height: 100px;
+  width: 100px;
+}
+
+section {
+  background: #2B331B;
+  color: #FFFFFF;
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 90%;
+  padding-left: 0;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
+
+.cards li {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  width: max(40%, 35rem);
+  margin-block: 2rem;
+}
+
+@media (max-width: 812px) {
+  .cards li {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 85%;
+    text-align: center;
+    margin-block: 5vw;
+  }
+}
+.cards h2 {
+  margin-top: 0;
+  font-family: "JosefinSans";
+  font-weight: regular;
+  font-size: 4.5rem;
+  text-transform: uppercase;
+}
+
+.cards p {
+  font-family: "Barlow";
+  font-weight: regular;
+  font-size: 2rem;
+}
+
+.cardContent {
+  width: 80%;
+  padding-left: 3rem;
+}
+
+.iconHolder {
+  width: 6rem;
+  height: 6rem;
+  background: #FFD300;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+@media (max-width: 812px) {
+  .iconHolder {
+    width: 20vw;
+    height: 20vw;
+    text-align: center;
+    margin-block: 5vw;
+  }
+}
+.iconHolder img {
+  display: block;
+  width: 50%;
+}
+
+.bnS {
+  background: #171B0E;
+}
+
+.content {
+  width: 40%;
+}
+
+.content h3 {
+  margin-top: 0;
+  font-family: "JosefinSans";
+  font-weight: regular;
+  font-size: 4rem;
+  text-transform: uppercase;
+  padding-block: 1rem;
+  margin: 0;
+}
+
+.content p {
+  font-family: "Barlow";
+  font-weight: regular;
+  font-size: 2rem;
+  padding-block: 2rem;
+  margin-block: 0;
+  margin-right: 15%;
+}
+
+@media (max-width: 812px) {
+  .right {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 85%;
+    text-align: center;
+    margin-block: 15vw;
+  }
+}
+.left {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  text-align: right;
+  width: clamp(40%, 44vw, 50%);
+}
+
+@media (max-width: 812px) {
+  .left {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    width: 85%;
+    text-align: center;
+    margin-block: 5vw;
+  }
+}
+.left p {
+  margin-left: 10%;
+  margin-right: 0;
+  text-align: right;
+}
+
+@media (max-width: 812px) {
+  .left p {
+    text-align: left;
+    margin: 0;
+  }
+}
+.readMore {
+  background: #FFD300;
+  color: #0F0F0F;
+  text-transform: uppercase;
+  text-decoration: none;
+  display: block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 2rem;
+  font-family: "Barlow";
+  font-weight: regular;
+  font-size: 2rem;
+}
+
+@media (max-width: 812px) {
+  .readMore {
+    width: 100%;
+    margin: 0;
+  }
+}
+.friesWrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-bottom: 5vw;
+}
+
+@media (max-width: 812px) {
+  .friesWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 20vw;
+  }
+}
+.popoutImage {
+  position: relative;
+  width: clamp(40%, 44vw, 50%);
+  height: 28vw;
+}
+
+@media (max-width: 812px) {
+  .popoutImage {
+    width: 90%;
+    box-shadow: none;
+    margin-bottom: 15vw;
+  }
+}
+@media (max-width: 812px) {
+  .popoutImage img {
+    width: 100%;
+    box-shadow: none;
+    border: 2vw solid #FFD300;
+  }
+}
+.leftImage {
+  position: absolute;
+  top: -3rem;
+  box-shadow: 2rem 2rem #FFD300;
+  width: 100%;
+}
+
+.rightImage {
+  position: absolute;
+  bottom: -3rem;
+  right: 0;
+  box-shadow: -2rem 2rem #FFD300;
+  width: 100%;
+}
+
+.tsnWrapper {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-block: 2vw;
+}
+
+@media (max-width: 812px) {
+  .tsnWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
+.giftCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-block: 10rem;
+}
+
+.giftCard h3 {
+  font-family: "JosefinSans";
+  font-weight: bold;
+  font-size: 4.5rem;
+  color: #FFD300;
+}
+
+.giftCard p {
+  font-family: "Barlow";
+  font-weight: normal;
+  font-size: 2rem;
+  padding-block: 2rem;
+}
+
+.findOutMore {
+  color: #FFFFFF;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: "JosefinSans";
+  font-weight: normal;
+  font-size: 2rem;
+  background: #171B0E;
+  padding: 2rem;
+  display: block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+@media (max-width: 812px) {
+  .findOutMore {
+    width: 100%;
+    text-align: center;
+    margin-block: 5vw;
+  }
+}
+.banner {
+  background: url(../the-restaurant-mall-assets/banner.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 40vw;
+}
+
+.natureSpaces {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding-bottom: 5vw;
+}
+
+.natureSpaces h3 {
+  color: #FFD300;
+  font-family: "JosefinSans";
+  font-weight: bold;
+  font-size: 4.5rem;
+  text-transform: uppercase;
+  margin-top: 0;
+}
+
+.squareImg {
+  width: 28vw;
+  padding-block: calc(0.5 * (130em - 100vw));
+  min-width: 26rem;
+  flex-grow: 1;
+}
+
+@media (max-width: 812px) {
+  .squareImg {
+    padding-block: 5vw;
+  }
+}
+.squareImg img {
+  width: 100%;
+  box-shadow: -1vw 1vw #FFD300;
+}
+
+@media (max-width: 812px) {
+  .squareImg img {
+    box-shadow: none;
+    border: 2vw solid #FFD300;
+  }
+}
+.natureContent {
+  width: 60%;
+  padding-left: 5%;
+  flex-grow: 1;
+}
+
+.gallery {
+  background: #171B0E;
+}
+
+.gallery ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-block: 5vw;
+}
+
+.gallery ul li {
+  width: 24vw;
+  list-style: none;
+}
+
+@media (max-width: 1200px) {
+  .gallery ul li {
+    width: 33vw;
+  }
+}
+.gallery ul img {
+  width: 100%;
+}
+
+@media (max-width: 1200px) {
+  .gallery ul :nth-child(2) {
+    display: none;
+  }
+}
+footer {
+  background: #0F0F0F;
+  color: #FFFFFF;
+  text-align: center;
+  margin: 0;
+}
+
+footer p {
+  margin: 0;
+  padding-block: 2rem;
+}
+
+body {
+  background: #2B331B;
+}
+
+.blogImage {
+  background: url(../the-restaurant-mall-assets/blog-header.jpg);
+  height: clamp(10rem, 36vw, 115rem);
+}
+
+.blogContent {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding-block: 5rem;
+}
+
+@media (max-width: 1100px) {
+  .blogContent {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
+.leftSide {
+  background: #171B0E;
+  border: 2rem solid #2B331B;
+  flex-basis: 30rem;
+  max-width: 45rem;
+  color: #FFFFFF;
+  flex-grow: 1;
+  margin-bottom: 30rem;
+  padding-bottom: 2rem;
+}
+
+@media (max-width: 1100px) {
+  .leftSide {
+    flex-grow: 1;
+    max-width: 75%;
+    margin-bottom: 0;
+  }
+}
+.leftSide h4 {
+  color: #FFD300;
+  font-family: "JosefinSans";
+  font-weight: bold;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  margin-block: 1rem;
+}
+
+.leftSide img {
+  position: relative;
+  width: 100%;
+  left: -3rem;
+  top: -2rem;
+}
+
+@media (max-width: 1100px) {
+  .leftSide img {
+    left: 0;
+    top: 0;
+  }
+}
+.recent {
+  color: #FFFFFF;
+  padding-left: 2rem;
+}
+
+.recent h4 {
+  color: #FFD300;
+  font-family: "JosefinSans";
+  font-weight: bold;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+}
+
+.recent a {
+  text-decoration: none;
+  font-family: "Barlow";
+  font-weight: bold;
+  font-size: 1.5rem;
+  color: #FFFFFF;
+}
+
+.featured {
+  padding: 5%;
+  margin-block: 0;
+}
+
+.rightSide {
+  border-right: 0;
+  flex-basis: 80rem;
+  max-width: 125rem;
+  flex-grow: 1;
+  position: relative;
+  top: -30rem;
+}
+
+@media (max-width: 1100px) {
+  .rightSide {
+    width: 85%;
+    margin: 0 auto;
+    top: 0;
+  }
+}
+.rightSide .opportunitiesImg {
+  box-shadow: -12px 12px 0px 6px #FFD300;
+  box-shadow: -20px 23px 0px 0px #FFD300;
+  position: relative;
+  right: -2rem;
+  width: min(4vw, 4rem);
+}
+
+@media (max-width: 1100px) {
+  .rightSide .opportunitiesImg {
+    position: static;
+    width: 100%;
+    box-shadow: none;
+    border: 1vw solid #FFD300;
+  }
+}
+.rightSide h3 {
+  color: #FFD300;
+  font-family: "JosefinSans";
+  font-weight: bold;
+  font-size: 4.5rem;
+  text-transform: uppercase;
+  margin: 0;
+  padding-block: 1rem;
+  font-size: clamp(2rem, 9vw, 4.5rem);
+}
+
+.opportunities {
+  border-left: 1rem solid #FFD300;
+  border-bottom: 1rem solid #FFD300;
+  padding: 4rem 0 4rem 4rem;
+}
+
+@media (max-width: 1100px) {
+  .opportunities {
+    border: 1vw solid #FFD300;
+    margin-top: -1vw;
+  }
+}
+.comments h3 {
+  padding: 5%;
+}
+
+@media (max-width: 1100px) {
+  .comments h3 {
+    text-align: center;
+  }
+}
+.commentCard {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  padding: 2rem;
+}
+
+@media (max-width: 480px) {
+  .commentCard {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
+.date {
+  font-family: "JosefinSans";
+  font-weight: bold;
+  font-size: 3rem;
+  color: #FFD300;
+}
+
+.commentForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  width: 100%;
+  font-size: 3rem;
+  margin-top: 10rem;
+}
+
+@media (max-width: 1100px) {
+  .commentForm {
+    margin-top: 0;
+  }
+}
+.commentForm input[type=text] {
+  color: #FFFFFF;
+  border: none;
+  background: transparent;
+  border-bottom: 2px solid #FFD300;
+  width: 40%;
+}
+
+@media (max-width: 480px) {
+  .commentForm input[type=text] {
+    width: 85%;
+  }
+}
+.commentForm input[type=textarea] {
+  border: 2px solid #FFD300;
+  height: 30rem;
+  background: rgba(255, 255, 255, 0);
+  color: #FFFFFF;
+}
+
+.commentForm button {
+  width: 80%;
+  background: #FFD300;
+  text-transform: uppercase;
+  padding-block: 4rem;
+  border: none;
+}
+
+.nameAndEmail {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+  flex-shrink: 1;
+  width: 80%;
+}
+
+@media (max-width: 480px) {
+  .nameAndEmail {
+    flex-direction: column;
+    width: 100%;
+  }
+}
+.nameAndEmail input {
+  width: 50%;
+}
+
+.nameAndEmail .name, .nameAndEmail .email {
+  width: 45rem;
+  padding: 0;
+}
+
+.commentArea, .name, .email {
+  width: 80%;
+  margin-block: 2rem;
+} /*# sourceMappingURL=blog.css.map */
+body {
+  background: #2B331B;
+}
+
 .contactImage {
   background: url(../the-restaurant-mall-assets/contact-header.jpg);
   height: clamp(10rem, 35.4vw, 115rem);
@@ -722,6 +1714,15 @@ footer p {
   align-items: flex-start;
   flex-wrap: wrap;
 }
+@media (max-width: 1110px) {
+  .contactContent {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
 
 .contactLeftSide {
   width: 28%;
@@ -733,11 +1734,26 @@ footer p {
   padding-block: 10rem;
   color: #FFFFFF;
   flex-grow: 1;
-  margin-bottom: 25rem;
+}
+@media (max-width: 1110px) {
+  .contactLeftSide {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
 }
 .contactLeftSide p {
   padding-left: 6rem;
   flex-grow: 1;
+}
+@media (max-width: 1110px) {
+  .contactLeftSide p {
+    padding: 0;
+    text-align: center;
+  }
 }
 
 .social {
@@ -748,10 +1764,21 @@ footer p {
   flex-wrap: nowrap;
   flex-grow: 1;
 }
+@media (max-width: 1110px) {
+  .social {
+    padding: 0;
+    text-align: center;
+  }
+}
 .social li {
   list-style: none;
   display: block;
   padding: 2rem;
+}
+@media (max-width: 1110px) {
+  .social li {
+    padding: 5vw;
+  }
 }
 .social a {
   padding-block: 30%;
@@ -768,6 +1795,13 @@ footer p {
   bottom: 10rem;
   width: clamp(80rem, 70vw, 100rem);
   flex-grow: 1;
+}
+@media (max-width: 1110px) {
+  .contactRightSide {
+    width: 85%;
+    bottom: 0;
+    padding: 0;
+  }
 }
 
 .formWrapper {
@@ -787,6 +1821,11 @@ footer p {
   padding-block: 10rem;
   margin-top: -15%;
 }
+@media (max-width: 1110px) {
+  .contactForm {
+    margin-top: 5vw;
+  }
+}
 .contactForm input[type=text] {
   color: #FFFFFF;
   border: none;
@@ -794,9 +1833,14 @@ footer p {
   border-bottom: 2px solid #FFD300;
   width: 40%;
 }
+@media (max-width: 480px) {
+  .contactForm input[type=text] {
+    width: 80%;
+  }
+}
 .contactForm input[type=textarea] {
   border: 2px solid #FFD300;
-  height: 30rem;
+  height: 30vw;
   background: rgba(255, 255, 255, 0);
   color: #FFFFFF;
 }
