--- a/styles/mallContact.css
+++ b/styles/mallContact.css
@@ -373,7 +373,7 @@ section {
   margin-top: 0;
   font-family: "JosefinSans";
   font-weight: regular;
-  font-size: 4.5rem;
+  font-size: min(12vw, 4.5rem);
   text-transform: uppercase;
 }
 .cards p {
@@ -385,6 +385,11 @@ section {
 .cardContent {
   width: 80%;
   padding-left: 3rem;
+}
+@media (max-width: 812px) {
+  .cardContent {
+    padding-left: 0;
+  }
 }
 
 .iconHolder {
@@ -1094,7 +1099,7 @@ section {
   margin-top: 0;
   font-family: "JosefinSans";
   font-weight: regular;
-  font-size: 4.5rem;
+  font-size: min(12vw, 4.5rem);
   text-transform: uppercase;
 }
 
@@ -1109,6 +1114,11 @@ section {
   padding-left: 3rem;
 }
 
+@media (max-width: 812px) {
+  .cardContent {
+    padding-left: 0;
+  }
+}
 .iconHolder {
   width: 6rem;
   height: 6rem;
@@ -1557,7 +1567,7 @@ body {
   box-shadow: -20px 23px 0px 0px #FFD300;
   position: relative;
   right: -2rem;
-  width: min(4vw, 4rem);
+  width: 100%;
 }
 
 @media (max-width: 1100px) {
@@ -1824,6 +1834,8 @@ body {
 @media (max-width: 1110px) {
   .contactForm {
     margin-top: 5vw;
+    box-shadow: none;
+    border: 1vw solid #FFD300;
   }
 }
 .contactForm input[type=text] {
